--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,1 +1,18 @@
+{
+  "name": "sports-ai-frontend",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Frontend do Bot Sports Analyst",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "axios": "^1.6.7"
+  },
+  "devDependencies": {
+    "vite": "^5.0.0"
+  }
+}
 
